clusters/home-workers/ingress-nginx/socryx-topled/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socryx-topled
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: socryx-topled.arvo.network
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: socryx-topled
            port:
              number: 80
